--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,4 +11,9 @@ services:
       class: AppBundle\DomainModel\UserService
       arguments: [ "@doctrine.orm.entity_manager" ]
 
+    app.form.registration:
+      class: AppBundle\Form\RegistrationType
+      tags:
+        - { name: form.type, alias: app_user_registration }
+
 
