--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    paths:
+            '%kernel.project_dir%/app/Resources/views': app_views
 
 # Doctrine Configuration
 doctrine:
