--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,9 +18,16 @@ security:
 
             logout:       true
             anonymous:    true
+            remember_me:
+              secret:   '%secret%'
+              lifetime: 604800 # 1 week in seconds
+              path:     /
+              always_remember_me: true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/panel/, role:  IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/panel/, role: ROLE_ADMIN }
+        - { path: ^/*, role: ROLE_USER }
+
