--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,6 +28,6 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/panel/, role: ROLE_ADMIN }
+        - { path: ^/panel/, role: ROLE_USER }
         - { path: ^/*, role: ROLE_USER }
 
