--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,5 +29,6 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/panel/, role: ROLE_USER }
+        - { path: ^/api/git, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/*, role: ROLE_USER }
 
