--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,7 +37,7 @@ services:
       arguments: [ "@doctrine.orm.entity_manager" ]
     git_lab_hook.service:
       class: AppBundle\DomainModel\GitLabHookService
-      arguments: ["@user.service", "@badge.service"]
+      arguments: ["@user.service", "@user_badge_progress.service"]
     user_badge_progress.service:
       class: AppBundle\DomainModel\UserBadgeProgressService
       arguments: [ "@doctrine.orm.entity_manager" ]
