--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,7 +28,7 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/panel/, role: ROLE_USER }
+        - { path: ^/panel/, role: ROLE_ADMIN }
         - { path: ^/api/git, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/*, role: ROLE_USER }
 
