--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "friendsofsymfony/user-bundle": "~2.0",
         "incenteev/composer-parameter-handler": "^2.0",
         "myclabs/php-enum": "^1.5",
+        "nesbot/carbon": "^1.22",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
