--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "myclabs/php-enum": "^1.5",
         "nesbot/carbon": "^1.22",
+        "ornicar/gravatar-bundle": "^1.1",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
